# llama.cpp.android

./: .gitignore  LICENSE  README.md  build.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/llama/: Downloadable.kt  Llama.kt  MainActivity.kt
app/src/main/java/com/example/llama/chat/: ChatViewModel.kt
app/src/main/java/com/example/llama/chat/model/: ChatModels.kt
app/src/main/java/com/example/llama/chat/ui/: ChatInput.kt  ChatScreen.kt  MarkdownMessage.kt  MessageBubble.kt  MessageContent.kt
app/src/main/java/com/example/llama/settings/: SettingsScreen.kt
app/src/main/java/com/example/llama/ui/theme/: Color.kt  Theme.kt  Type.kt
llama/: build.gradle.kts
llama/src/main/cpp/: CMakeLists.txt  llama-android.cpp
llama/src/main/java/android/llama/cpp/: LLamaAndroid.kt
